fix(TreePicker,CheckTreePicker): fix `renderExtraFooter` causing the last option to be invisible

--- a/src/CheckTreePicker/styles/index.less
+++ b/src/CheckTreePicker/styles/index.less
@@ -164,9 +164,6 @@
 }
 
 .rs-picker-menu {
-  display: flex;
-  flex-direction: column;
-
   &.rs-check-tree-menu {
     padding-top: @picker-menu-padding;
 
