--- a/src/DatePicker/styles/index.less
+++ b/src/DatePicker/styles/index.less
@@ -32,6 +32,11 @@
       height: 286px;
     }
   }
+
+  &-menu {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 // Calendar in DatePicker popup
