--- a/src/DateRangePicker/styles/index.less
+++ b/src/DateRangePicker/styles/index.less
@@ -8,6 +8,9 @@
 // ----------------------
 
 .rs-picker-daterange-menu {
+  display: flex;
+  flex-direction: column;
+
   .rs-calendar {
     display: inline-block;
     height: 274px;
