--- a/src/Picker/styles/index.less
+++ b/src/Picker/styles/index.less
@@ -277,8 +277,6 @@
   overflow: hidden;
   // Remove transition
   transition: none;
-  display: flex;
-  flex-direction: column;
 
   .high-contrast-mode({
     border: 1px solid var(--rs-border-primary);
